# Task1_Detect

./: CMakeLists.txt  main.cpp
Class/Armor/: Armor.cpp  CMakeLists.txt
Class/Armor/include/: Armor.h
Class/Energy_Switch/: CMakeLists.txt  Energy_Switch.cpp
Class/Energy_Switch/include/: Energy_Switch.h
Class/Light/: CMakeLists.txt  Light.cpp
Class/Light/include/: Light.h  Match_Condition.h
Video/: 原视频.avi
cam/: cam.yml
